2000-05-11  Sven Wischnowsky  <wischnow@zsh.org>

	* 11319: Completion/Core/_main_complete, Doc/Zsh/compsys.yo,
 	Doc/Zsh/mod_complist.yo, Src/Zle/compcore.c, Src/Zle/complist.c:
 	make ^G in menu-selection restore the old command line; add
 	select=long* values for menu style to start menu-selection if list
 	is too long for screen
	
2000-05-11  Oliver Kiddle  <opk@zsh.org>

	* 11315: Doc/Zsh/builtins.yo, Doc/Zsh/compsys.yo, Doc/Zsh/compwid.yo,
	Doc/Zsh/expn.yo, Doc/Zsh/grammar.yo, Doc/Zsh/mod_complist.yo,
	Doc/Zsh/mod_computil.yo, Doc/Zsh/mod_deltochar.yo,
	Doc/Zsh/mod_mathfunc.yo, Doc/Zsh/mod_parameter.yo, Doc/Zsh/mod_zle.yo,
	Doc/Zsh/mod_zutil.yo, Doc/Zsh/options.yo, Doc/Zsh/params.yo,
	Doc/Zsh/zftpsys.yo: Fix spelling in docs

	* 11316: Src/params.c: remove return value from uniqarray which
	caused a compiler error on IRIX

2000-05-10  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 11314: Src/builtin.c, Src/params.c: typeset -Uing tied variables
	didn't update the value in the environment.

2000-05-10  Bart Schaefer  <schaefer@zsh.org>

	* 11312: Config/config.mk: defs.mk depends on config.status.

2000-05-10  Tanaka Akira  <akr@zsh.org>

	* 11309, 11310: Doc/Zsh/expn.yo: fix missing section.

2000-05-10  Bart Schaefer  <schaefer@zsh.org>

	* 11302: Functions/Zle/edit-command-line: Cursor placement and
	defensive programming.

2000-05-10  Oliver Kiddle  <opk@zsh.org>

	* 11301: Src/Zle/zle_misc.c: AIX dependency fix

	* 11300: Completion/User/_nedit: fix breakage from 11195

2000-05-10  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11299: Bart/pws: Functions/Zle/edit-command-line: edit command
	line with external editor.

2000-05-10  Sven Wischnowsky  <wischnow@zsh.org>

	* 11298: Doc/Zsh/compsys.yo, Src/Zle/computil.c: more fixes for
 	_arguments and its docs
	
2000-05-10  Bart Schaefer  <schaefer@zsh.org>

	* 11297: Doc/Zsh/compwid.yo, Doc/Zsh/zle.yo: Document that ZLE
	user-defined widget functions are executed with standard input
	closed.
	